--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ pandas
 scikit-learn
 matplotlib
 Pillow
-# tensorflow==2.18.0   # Stable release (works with Python 3.10/3.11)
+tensorflow==2.18.0   # Stable release (works with Python 3.10/3.11)
